@@ -4,16 +4,17 @@ import com.baomidou.mybatisplus.core.mapper.BaseMapper;
 import lombok.Builder;
 import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.ibatis.executor.BatchResult;
+import org.apache.ibatis.session.ExecutorType;
 import org.apache.ibatis.session.SqlSession;
 import org.apache.ibatis.session.SqlSessionFactory;
 import reactor.core.publisher.Mono;
 
+import java.sql.Statement;
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Builder
 @Slf4j
@@ -26,16 +27,27 @@ public class SegmentEventClientMybatisPlus<T, D> extends AbstractBufferSegmentEv
     private final Class<? extends BaseMapper<D>> mapperClass;
     @NonNull
     private final Function<T, D> argumentsConverter;
+    @Builder.Default
+    private boolean isSupportValues = true;
 
     @Override
     public Mono<Boolean> send(List<T> events) {
         return Mono.fromCallable(() -> {
-            try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
+            try (SqlSession sqlSession = sqlSessionFactory.openSession(ExecutorType.BATCH)) {
                 BaseMapper<D> mapper = sqlSession.getMapper(mapperClass);
-                List<BatchResult> result = mapper.insert(events.stream().map(argumentsConverter).collect(Collectors.toList()));
+                List<D> convertedList = events.stream().map(argumentsConverter).toList();
+                int result = 0;
+                if (isSupportValues) {
+                    result = mapper.insert(convertedList).stream()
+                            .flatMapToInt(br -> Arrays.stream(br.getUpdateCounts())) // 展开所有 updateCounts
+                            .map(uc -> uc == Statement.SUCCESS_NO_INFO ? 1 : uc)     // 处理 SUCCESS_NO_INFO
+                            .reduce(result, Integer::sum);                                // 累加所有值
+                } else {
+                    result = convertedList.stream().map(mapper::insert).reduce(result, Integer::sum);
+                }
                 sqlSession.commit();
                 log.debug("Batch insert completed: {} records inserted", result);
-                return result.size() == events.size();
+                return result == events.size();
             } catch (Exception ex) {
                 log.error("Batch insert failed", ex);
                 return Boolean.FALSE;
